<resources>
    <string name="app_name">My Outdoor Workouts</string>
    <string name="start_service">Start Service</string>
    <string name="prev_workout_name">WORKOUT NAME</string>
    <string name="workout_name">WORKOUT NAME</string>
    <string name="time">Time:</string>
    <string name="workout_time">WORKOUT TIME</string>
    <string name="distance">Distance:</string>
    <string name="avg_speed">Average Speed:</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="enter_workout_name">Enter Workout Name</string>
    <string name="select_workout">Select A Past Workout:</string>
    <string name="workout_date">WORKOUT DATE</string>
    <string name="new_workout">New Workout</string>
    <string name="prev_workouts">Previous Workouts</string>
    <string-array name="types_array">
        <item>Hike</item>
        <item>Bike</item>
        <item>Run</item>
    </string-array>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="empty_time">00:00:00</string>
    <string name="empty_speed">0.0 min/mi</string>
    <string name="empty_distance">0.00 miles</string>
    <string name="end">End</string>
    <string name="time_data">time data</string>
    <string name="distance_data">distance data</string>
    <string name="avg_speed_data">avg speed data</string>
    <string name="start_workout">Start Workout</string>
    <string name="start_new_workout">NEW WORKOUT</string>
    <string name="get_location">Get Location</string>
    <string name="welcome">Welcome!</string>
    <string name="avg_speed2">Avg. Speed:</string>
</resources>