<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/newWorkoutMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/workoutNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/workoutNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/enter_workout_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWorkoutMap"
        android:gravity="center"/>

    <TextView
        android:id="@+id/newWorkoutTimeLabel"
        android:layout_width="0dp"
        android:textSize="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/newWorkoutDistLabel"
        app:layout_constraintEnd_toStartOf="@+id/newWorkoutTimeValueTextView"
        app:layout_constraintStart_toStartOf="@+id/workoutNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/workoutNameEditText" />

    <TextView
        android:id="@+id/newWorkoutTimeValueTextView"
        android:layout_width="0dp"
        android:textSize="24dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="time data"
        app:layout_constraintBottom_toBottomOf="@+id/newWorkoutTimeLabel"
        app:layout_constraintEnd_toEndOf="@+id/workoutNameEditText"
        app:layout_constraintStart_toEndOf="@+id/newWorkoutTimeLabel"
        app:layout_constraintTop_toTopOf="@+id/newWorkoutTimeLabel" />

    <TextView
        android:id="@+id/newWorkoutDistLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/distance"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/newWorkoutSpeedLabel"
        app:layout_constraintEnd_toStartOf="@+id/newWorkoutDistDataTextView"
        app:layout_constraintStart_toStartOf="@+id/newWorkoutTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/newWorkoutTimeLabel" />

    <TextView
        android:id="@+id/newWorkoutDistDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="distance data"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/newWorkoutDistLabel"
        app:layout_constraintEnd_toEndOf="@+id/newWorkoutTimeValueTextView"
        app:layout_constraintStart_toEndOf="@+id/newWorkoutDistLabel"
        app:layout_constraintTop_toTopOf="@+id/newWorkoutDistLabel" />

    <TextView
        android:id="@+id/newWorkoutSpeedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/avg_speed"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/newWorkoutDeleteButton"
        app:layout_constraintEnd_toStartOf="@+id/newWorkoutSpeedDataTextView"
        app:layout_constraintStart_toStartOf="@+id/newWorkoutDistLabel"
        app:layout_constraintTop_toBottomOf="@+id/newWorkoutDistLabel" />

    <TextView
        android:id="@+id/newWorkoutSpeedDataTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="avg speed data"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/newWorkoutSpeedLabel"
        app:layout_constraintEnd_toEndOf="@+id/newWorkoutDistDataTextView"
        app:layout_constraintStart_toEndOf="@+id/newWorkoutSpeedLabel"
        app:layout_constraintTop_toTopOf="@+id/newWorkoutSpeedLabel" />

    <Button
        android:id="@+id/newWorkoutDeleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/newWorkoutBackButton"
        app:layout_constraintEnd_toEndOf="@+id/newWorkoutSpeedDataTextView"
        app:layout_constraintStart_toEndOf="@+id/newWorkoutBackButton"
        app:layout_constraintTop_toTopOf="@+id/newWorkoutBackButton" />

    <Button
        android:id="@+id/newWorkoutBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/newWorkoutDeleteButton"
        app:layout_constraintStart_toStartOf="@+id/newWorkoutSpeedLabel"
        app:layout_constraintTop_toBottomOf="@+id/newWorkoutSpeedLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>